--- a/client/src/assets/styles/hero.css
+++ b/client/src/assets/styles/hero.css
@@ -34,16 +34,16 @@
 
 /* Ajuste de los títulos */
 .overlay h2 {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 400;
     text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
-    color: #F5DEB3;
+    color: white;
 }
 
 .overlay h1 {
-    font-size: 2.8rem;
+    font-size: 3rem;
     font-weight: 700;
-    text-shadow: 3px 3px 10px rgba(0, 0, 0, 0.7);
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7);
     color: white;
 }
 
